scrollbar issue fix

--- a/index.css
+++ b/index.css
@@ -6,7 +6,9 @@
 
 * {
   font-family: "Ubuntu", serif;
-  scrollbar-gutter: stable;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
